--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
+  <a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
 </body>
 </html>
