feat(recipes): add the Tartufo content

--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
 <body>
   
@@ -12,8 +12,8 @@
   src="../../assets/images/checken-rice.webp" 
   alt="Lemon Chicken and Rice Casserole"
   width="480">
-  <h2>Try this lemon chicken and rice casserole for an easy mid-week dinner.</h2>
-
+  <h2>Description</h2>
+  
   <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for yourself or a few others. This chicken and rice casserole does just that while being bright and bold thanks to lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in a casserole.</p>
 
   <p>The chicken thighs are seared quickly in hot oil before finishing in the oven, resulting in tender and moist meat with a crispy exterior. If you can’t find cream of chicken soup at the store (or want to try a different option), cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy and perfect.</p>
