--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
   <h1>Odin Recipes</h1>
   <a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
+
+  <ul>
+    <li>  <a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a></li>
+    <li><a href="./recipes/tartufo/">Tartufo</a></li>
+    <li></li>
+  </ul>
 </body>
 </html>
