--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li>  <a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a></li>
     <li><a href="./recipes/tartufo/">Tartufo</a></li>
-    <li></li>
+    <li><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a></li>
   </ul>
 </body>
 </html>
