feat(recipes): add breadcrumbs

--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -6,6 +6,7 @@
   <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
 <body>
+  <p><a href="../../index.html">Home</a> / Lemon Chicken and Rice Casserole </p>
   
   <h1>Lemon Chicken and Rice Casserole</h1>
   <img 
@@ -46,6 +47,7 @@
     <li>Remove from the oven. Stir rice mixture, and sprinkle with parsley. Divide chicken, lemon slices, and rice evenly among 4 plates. Garnish with
       additional tarragon and crushed red pepper.</li>
   </ol>
+
 
 
 </body>
