--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -6,7 +6,10 @@
   <title>Tartufo | Odin Recipes</title>
 </head>
 <body>
+  <p><a href="../../index.html">Home</a> / Tartufo</p>
+  
   <h1>Tartufo</h1>
+  
   <img src="../../assets/images/tartufo.webp"
    alt="Tartufo"
    width="480">
@@ -35,5 +38,6 @@
     <li>Working with 1 ice-cream ball at a time, remove ice-cream ball from freezer. Remove plastic wrap, and place ice-cream ball on a wire rack set inside a rimmed baking sheet. Pour chocolate mixture over ice-cream ball, allowing it to thinly coat the top and sides./li>
     <li>If coating in cookie mixture, quickly and carefully invert chocolate-coated ice-cream ball into cookie mixture, rolling until evenly coated. Transfer coated ice cream ball to a clean wire rack set inside a large, rimmed baking sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each one. Freeze until set, about 1 hour, or until ready to serve.</li>
    </ol>
+
 </body>
 </html>
