--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -6,6 +6,8 @@
   <title>Caprese Stuffed Avocado | Odin Recipes</title>
 </head>
 <body>
+  <p><a href="../../index.html">Home</a> / Caprese Stuffed Avocado</p>
+  
   <h1>Caprese Stuffed Avocado</h1>
   <img 
   src="../../assets/images/r-avocado.webp" 
@@ -30,5 +32,6 @@
     <li>Arrange avocado halves onto a plate.</li>
     <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into each avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
   </ol>
+ 
 </body>
 </html>
