fix(recipes): update Homepage links

--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -6,7 +6,7 @@
   <title>Caprese Stuffed Avocado | Odin Recipes</title>
 </head>
 <body>
-  <p><a href="../../index.html">Home</a> / Caprese Stuffed Avocado</p>
+  <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
   
   <h1>Caprese Stuffed Avocado</h1>
   <img 
