--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -6,7 +6,7 @@
   <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
 <body>
-  <p><a href="../../index.html">Home</a> / Lemon Chicken and Rice Casserole </p>
+  <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
   
   <h1>Lemon Chicken and Rice Casserole</h1>
   <img 
