--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -6,7 +6,7 @@
   <title>Tartufo | Odin Recipes</title>
 </head>
 <body>
-  <p><a href="../../index.html">Home</a> / Tartufo</p>
+  <p><a href="../../">Home</a> / Tartufo</p>
   
   <h1>Tartufo</h1>
   
