feat: add logo on all project pages

--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
 </head>
+
 <body>
+
+  <div> <a href="#">
+      <img src="./assets/images/ooodin.svg" alt="odin logo" width="135">
+    </a>
+  </div>
+
+
+  <img src="./assets/images/bgbg.webp" alt="home picture" width="48%">
+
   <h1>Odin Recipes</h1>
+
   <ul>
-    <li>  <a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a></li>
-    <li><a href="./recipes/tartufo/">Tartufo</a></li>
-    <li><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a></li>
+    <li>
+      <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
+      </h2>
+      <img src="./assets/images/checken-rice.webp" width="200" alt="Lemon checken rice">
+    </li>
+
+    <li>
+      <h2>
+        <a href="./recipes/tartufo/">Tartufo</a>
+      </h2>
+      <img src="./assets/images/tartufo.webp" width="200" alt="Tartufo">
+    </li>
+
+    <li>
+      <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
+      </h2>
+      <img src="./assets/images/r-avocado.webp" width="200" alt="Capress Stuffed Avocado">
+    </li>
   </ul>
 </body>
+
 </html>
