--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -6,13 +6,16 @@
   <title>Caprese Stuffed Avocado | Odin Recipes</title>
 </head>
 <body>
+  <a href="../../"> 
+    <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
+  </a>
   <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
   
   <h1>Caprese Stuffed Avocado</h1>
   <img 
   src="../../assets/images/r-avocado.webp" 
   alt="Caprese Stuffed Avocado"
-  width="480">
+  width="360">
   <h2>Description</h2>
 
   <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using cherry tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
