--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -6,13 +6,19 @@
   <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
 <body>
+
+    <a href="../../"> 
+      <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
+    </a>
+   
+ 
   <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
   
   <h1>Lemon Chicken and Rice Casserole</h1>
   <img 
   src="../../assets/images/checken-rice.webp" 
   alt="Lemon Chicken and Rice Casserole"
-  width="480">
+  width="360">
   <h2>Description</h2>
   
   <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for yourself or a few others. This chicken and rice casserole does just that while being bright and bold thanks to lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in a casserole.</p>
