perf(images): add small images to load on smaller viewports

--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caprese Stuffed Avocado | Odin Recipes</title>
 </head>
+
 <body>
-  <a href="../../"> 
+  <a href="../../">
     <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
   </a>
   <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
-  
+
   <h1>Caprese Stuffed Avocado</h1>
-  <img 
-  src="../../assets/images/r-avocado.webp" 
-  alt="Caprese Stuffed Avocado"
-  width="360">
+
+  <img srcset="../../assets/images/r-avocado-360w.webp 360w,
+            ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
+    src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado">
+
   <h2>Description</h2>
 
-  <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using cherry tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
+  <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using cherry
+    tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
 
   <h2>Ingredients</h2>
   <ul>
@@ -33,8 +37,10 @@
   <h2>Steps</h2>
   <ol>
     <li>Arrange avocado halves onto a plate.</li>
-    <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into each avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
+    <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into each
+      avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
   </ol>
- 
+
 </body>
+
 </html>
