--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -8,16 +8,18 @@
 </head>
 
 <body>
- 
-    <a href="../../">
-      <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
-    </a>
+
+  <a href="../../">
+    <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
+  </a>
 
   <p><a href="../../">Home</a> / Tartufo</p>
 
   <h1>Tartufo</h1>
+  <img srcset="../../assets/images/tartufo-360w.webp 360w,
+            ../../assets/images/tartufo-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
+    src="../../assets/images/tartufo-750w.webp" alt="Lemon Chicken and Rice Casserole">
 
-  <img src="../../assets/images/tartufo.webp" alt="Tartufo" width="360">
 
   <h2>Description</h2>
   <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is freezing time
@@ -42,7 +44,7 @@
       maraschino cherry into the top of each ice-cream scoop, then top each with another 2 oz. (1/4-cup) scoop of ice
       cream. </li>
     <li>Working with 1 bowl of ice cream at a time, gather overhanging plastic, wrap it up around ice cream, and gently
-      twist it to form a ball. Freeze until ice cream is firm and set, about 2 hours. /li>
+      twist it to form a ball. Freeze until ice cream is firm and set, about 2 hours. </li>
     <li>Place chocolate chips in a large microwave-safe bowl, and microwave on HIGH in (30-second) intervals, stirring
       thoroughly between intervals, until melted, 3 to 4 minutes total. Whisk in coconut oil until oil is completely
       melted and mixture is combined. Let cool slightly at room temperature, about 10 minutes.</li>
@@ -50,7 +52,7 @@
       pulses. Transfer to a shallow bowl, and set aside at room temperature.</li>
     <li>Working with 1 ice-cream ball at a time, remove ice-cream ball from freezer. Remove plastic wrap, and place
       ice-cream ball on a wire rack set inside a rimmed baking sheet. Pour chocolate mixture over ice-cream ball,
-      allowing it to thinly coat the top and sides./li>
+      allowing it to thinly coat the top and sides.</li>
     <li>If coating in cookie mixture, quickly and carefully invert chocolate-coated ice-cream ball into cookie mixture,
       rolling until evenly coated. Transfer coated ice cream ball to a clean wire rack set inside a large, rimmed baking
       sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each one.
