--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 
 <body>
 
-  <div> <a href="#">
-      <img src="./assets/images/ooodin.svg" alt="odin logo" width="135">
-    </a>
-  </div>
+  <a href="./">
+    <img src="./assets/images/ooodin.svg" alt="odin logo" width="135">
+  </a>
 
+  <br>
 
-  <img src="./assets/images/bgbg.webp" alt="home picture" width="48%">
+  <img 
+    srcset="./assets/images/hero-image-360w.webp 360w,
+            ./assets/images/hero-image-750w.webp 750w"
+    sizes="(max-width: 780px) 360px, 750px"
+    src="./assets/images/hero-image-750w.webp" 
+    alt="A steak is cooking in a skillet on a wooden table">
 
   <h1>Odin Recipes</h1>
 
@@ -23,20 +28,20 @@
     <li>
       <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
       </h2>
-      <img src="./assets/images/checken-rice.webp" width="200" alt="Lemon checken rice">
+      <img src="./assets/images/checken-rice-360w.webp" width="200" alt="Lemon checken rice">
     </li>
 
     <li>
       <h2>
         <a href="./recipes/tartufo/">Tartufo</a>
       </h2>
-      <img src="./assets/images/tartufo.webp" width="200" alt="Tartufo">
+      <img src="./assets/images/tartufo-360w.webp" width="200" alt="Tartufo">
     </li>
 
     <li>
       <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
       </h2>
-      <img src="./assets/images/r-avocado.webp" width="200" alt="Capress Stuffed Avocado">
+      <img src="./assets/images/r-avocado-360w.webp" width="200" alt="Capress Stuffed Avocado">
     </li>
   </ul>
 </body>
