--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
+
 <body>
 
-    <a href="../../"> 
-      <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
-    </a>
-   
- 
-  <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
-  
-  <h1>Lemon Chicken and Rice Casserole</h1>
-  <img 
-  src="../../assets/images/checken-rice.webp" 
-  alt="Lemon Chicken and Rice Casserole"
-  width="360">
-  <h2>Description</h2>
-  
-  <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for yourself or a few others. This chicken and rice casserole does just that while being bright and bold thanks to lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in a casserole.</p>
+  <a href="../../">
+    <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
+  </a>
 
-  <p>The chicken thighs are seared quickly in hot oil before finishing in the oven, resulting in tender and moist meat with a crispy exterior. If you can’t find cream of chicken soup at the store (or want to try a different option), cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy and perfect.</p>
+
+  <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
+
+  <h1>Lemon Chicken and Rice Casserole</h1>
+  <img srcset="../../assets/images/checken-rice-360w.webp 360w,
+            ../../assets/images/checken-rice-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
+    src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole">
+
+  <h2>Description</h2>
+
+  <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for
+    yourself or a few others. This chicken and rice casserole does just that while being bright and bold thanks to
+    lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in a
+    casserole.</p>
+
+  <p>The chicken thighs are seared quickly in hot oil before finishing in the oven, resulting in tender and moist meat
+    with a crispy exterior. If you can’t find cream of chicken soup at the store (or want to try a different option),
+    cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy and
+    perfect.</p>
 
   <h2>Ingredients</h2>
   <ul>
@@ -46,15 +54,28 @@
   <h2>Steps</h2>
   <ol>
     <li>Gather all ingredients.</li>
-    <li>Preheat the oven to 375 degrees F (190 degrees C). Season chicken thighs evenly with salt and pepper on both sides.</li>
-    <li>Heat oil in a large oven-safe skillet over medium-high. Add chicken thighs to skillet, skin sides down, and cook until golden brown on both sides, about 8 minutes. Transfer chicken thighs to a plate; set aside. Do not wipe skillet clean.</li>
-    <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add rice, cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually add broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice mixture and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the preheated oven.</li>
-    <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add rice, cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually add broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice mixture and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the preheated oven.</li>
-    <li>Remove from the oven. Stir rice mixture, and sprinkle with parsley. Divide chicken, lemon slices, and rice evenly among 4 plates. Garnish with
+    <li>Preheat the oven to 375 degrees F (190 degrees C). Season chicken thighs evenly with salt and pepper on both
+      sides.</li>
+    <li>Heat oil in a large oven-safe skillet over medium-high. Add chicken thighs to skillet, skin sides down, and cook
+      until golden brown on both sides, about 8 minutes. Transfer chicken thighs to a plate; set aside. Do not wipe
+      skillet clean.</li>
+    <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add rice,
+      cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually add
+      broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice mixture
+      and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the preheated
+      oven.</li>
+    <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add rice,
+      cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually add
+      broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice mixture
+      and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the preheated
+      oven.</li>
+    <li>Remove from the oven. Stir rice mixture, and sprinkle with parsley. Divide chicken, lemon slices, and rice
+      evenly among 4 plates. Garnish with
       additional tarragon and crushed red pepper.</li>
   </ol>
 
 
 
 </body>
+
 </html>
