perf(logo): replace the logo with a smaller version

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
   <a href="./">
-    <img src="./assets/images/ooodin.svg" alt="odin logo" width="135">
+    <img src="./assets/images/chef-odin-180w.png" alt="odin logo" width="160">
   </a>
 
-  <br>
+  <br><br>
 
   <img 
     srcset="./assets/images/hero-image-360w.webp 360w,
