--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <a href="../../">
-    <img src="../../assets/images/ooodin.svg" alt="odin logo" width="135">
+    <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" width="160">
   </a>
 
 
