--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li>
       <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
       </h2>
-      <img src="./assets/images/checken-rice-360w.webp" width="200" alt="Lemon checken rice">
+      <img src="./assets/images/chicken-rice-360w.webp" width="200" alt="Lemon Chicken rice">
     </li>
 
     <li>
