perf(images): set images height to prevent layout shifting

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+ 
   <title>Odin Recipes</title>
 </head>
 
 <body>
 
   <a href="./">
-    <img src="./assets/images/chef-odin-180w.png" alt="odin logo" width="160">
+    <img src="./assets/images/chef-odin-180w.png" alt="odin logo" height="79">
   </a>
 
   <br><br>
@@ -21,7 +22,8 @@
             ./assets/images/hero-image-750w.webp 750w"
     sizes="(max-width: 780px) 360px, 750px"
     src="./assets/images/hero-image-750w.webp" 
-    alt="A steak is cooking in a skillet on a wooden table">
+    alt="A steak is cooking in a skillet on a wooden table"
+    height="500">
 
   <h1>Odin Recipes</h1>
 
@@ -29,20 +31,20 @@
     <li>
       <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
       </h2>
-      <img src="./assets/images/chicken-rice-360w.webp" width="200" alt="Lemon Chicken rice">
+      <img src="./assets/images/chicken-rice-360w.webp" height="150"  alt="Lemon Chicken rice">
     </li>
 
     <li>
       <h2>
         <a href="./recipes/tartufo/">Tartufo</a>
       </h2>
-      <img src="./assets/images/tartufo-360w.webp" width="200" alt="Tartufo">
+      <img src="./assets/images/tartufo-360w.webp" height="150" alt="Tartufo">
     </li>
 
     <li>
       <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
       </h2>
-      <img src="./assets/images/r-avocado-360w.webp" width="200" alt="Capress Stuffed Avocado">
+      <img src="./assets/images/r-avocado-360w.webp" height="150"  alt="Capress Stuffed Avocado">
     </li>
   </ul>
 </body>
