--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <a href="../../">
-    <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" width="160">
+    <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
   </a>
   <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
 
@@ -18,7 +18,7 @@
 
   <img srcset="../../assets/images/r-avocado-360w.webp 360w,
             ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-    src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado">
+    src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500">
 
   <h2>Description</h2>
 
