feat(odin): align the project content in the middle of the page

--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../../style/main.css">
   <title>Lemon Chicken and Rice Casserole | Odin Recipes</title>
 </head>
 
 <body>
-
+  <div class="container">
   <a href="../../">
     <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
   </a>
@@ -75,7 +76,7 @@
       additional tarragon and crushed red pepper.</li>
   </ol>
 
-
+  </div>
 
 </body>
 
