--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../../style/main.css">
   <title>Tartufo | Odin Recipes</title>
 </head>
 
 <body>
-
+  <div class="container">
   <a href="../../">
     <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
   </a>
@@ -59,7 +60,7 @@
       sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each one.
       Freeze until set, about 1 hour, or until ready to serve.</li>
   </ol>
-
+  </div>
 </body>
 
 </html>
