--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
- 
+  <link rel="stylesheet" href="./style/main.css">
+
   <title>Odin Recipes</title>
 </head>
 
 <body>
 
-  <a href="./">
-    <img src="./assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-  </a>
+  <div class="container">
 
-  <br><br>
+    <a href="./">
+      <img src="./assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+    </a>
 
-  <img 
-    srcset="./assets/images/hero-image-360w.webp 360w,
-            ./assets/images/hero-image-750w.webp 750w"
-    sizes="(max-width: 780px) 360px, 750px"
-    src="./assets/images/hero-image-750w.webp" 
-    alt="A steak is cooking in a skillet on a wooden table"
-    height="500">
+    <br><br>
 
-  <h1>Odin Recipes</h1>
+    <img srcset="./assets/images/hero-image-360w.webp 360w,
+              ./assets/images/hero-image-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
+      src="./assets/images/hero-image-750w.webp" alt="A steak is cooking in a skillet on a wooden table" width="100%">
 
-  <ul>
-    <li>
-      <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
-      </h2>
-      <img src="./assets/images/chicken-rice-360w.webp" height="150"  alt="Lemon Chicken rice">
-    </li>
+    <h1>Odin Recipes</h1>
 
-    <li>
-      <h2>
-        <a href="./recipes/tartufo/">Tartufo</a>
-      </h2>
-      <img src="./assets/images/tartufo-360w.webp" height="150" alt="Tartufo">
-    </li>
+    <ul>
+      <li>
+        <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
+        </h2>
+        <img src="./assets/images/chicken-rice-360w.webp" height="150" alt="Lemon Chicken rice">
+      </li>
 
-    <li>
-      <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
-      </h2>
-      <img src="./assets/images/r-avocado-360w.webp" height="150"  alt="Capress Stuffed Avocado">
-    </li>
-  </ul>
+      <li>
+        <h2>
+          <a href="./recipes/tartufo/">Tartufo</a>
+        </h2>
+        <img src="./assets/images/tartufo-360w.webp" height="150" alt="Tartufo">
+      </li>
+
+      <li>
+        <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
+        </h2>
+        <img src="./assets/images/r-avocado-360w.webp" height="150" alt="Capress Stuffed Avocado">
+      </li>
+    </ul>
+  </div>
 </body>
 
 </html>
