--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../../style/main.css">
   <title>Caprese Stuffed Avocado | Odin Recipes</title>
 </head>
 
 <body>
+  <div class="container">
   <a href="../../">
     <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
   </a>
@@ -41,7 +43,7 @@
     <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into each
       avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
   </ol>
-
+</div>
 </body>
 
 </html>
