feat(hero-img): set the hero-imgs width for each page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <img srcset="./assets/images/hero-image-360w.webp 360w,
               ./assets/images/hero-image-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-      src="./assets/images/hero-image-750w.webp" alt="A steak is cooking in a skillet on a wooden table" width="100%">
+      src="./assets/images/hero-image-750w.webp" alt="A steak is cooking in a skillet on a wooden table" height="500px" class="img-hero">
 
     <h1>Odin Recipes</h1>
 
