--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -20,7 +20,7 @@
 
   <img srcset="../../assets/images/r-avocado-360w.webp 360w,
             ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-    src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500">
+    src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero" >
 
   <h2>Description</h2>
 
