--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -20,7 +20,7 @@
   <h1>Tartufo</h1>
   <img srcset="../../assets/images/tartufo-360w.webp 360w,
             ../../assets/images/tartufo-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-    src="../../assets/images/tartufo-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500">
+    src="../../assets/images/tartufo-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500" class="img-hero">
 
 
   <h2>Description</h2>
