--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -21,7 +21,7 @@
   <h1>Lemon Chicken and Rice Casserole</h1>
   <img srcset="../../assets/images/chicken-rice-360w.webp 360w,
             ../../assets/images/chicken-rice-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-    src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500">
+    src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500" class="img-hero">
 
   <h2>Description</h2>
 
