feat(home): create cards style

--- a/index.html
+++ b/index.html
@@ -19,33 +19,41 @@
     </a>
 
     <br><br>
-
+    
     <img srcset="./assets/images/hero-image-360w.webp 360w,
-              ./assets/images/hero-image-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-      src="./assets/images/hero-image-750w.webp" alt="A steak is cooking in a skillet on a wooden table" height="500px" class="img-hero">
+              ./assets/images/hero-image-750w.webp 750w" 
+              sizes="(max-width: 780px) 360px, 750px"
+      src="./assets/images/hero-image-750w.webp" 
+      alt="A steak is cooking in a skillet on a wooden table" 
+      height="500px" class="img-hero">
 
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
 
-    <ul>
-      <li>
+    <ul class="cards-container">
+      <li class="card">
+
+        <img src="./assets/images/chicken-rice-360w.webp" height="150" alt="Lemon Chicken rice">
         <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
         </h2>
-        <img src="./assets/images/chicken-rice-360w.webp" height="150" alt="Lemon Chicken rice">
       </li>
 
-      <li>
+      <li class="card">
+
+        <img src="./assets/images/tartufo-360w.webp" height="150" alt="Tartufo">
         <h2>
           <a href="./recipes/tartufo/">Tartufo</a>
         </h2>
-        <img src="./assets/images/tartufo-360w.webp" height="150" alt="Tartufo">
       </li>
 
-      <li>
+      <li class="card">
+
+        <img src="./assets/images/r-avocado-360w.webp" height="150" alt="Capress Stuffed Avocado">
         <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
         </h2>
-        <img src="./assets/images/r-avocado-360w.webp" height="150" alt="Capress Stuffed Avocado">
       </li>
     </ul>
+
+
   </div>
 </body>
 
