feat(odin): add footer for all pages

--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -60,6 +60,31 @@
       sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each one.
       Freeze until set, about 1 hour, or until ready to serve.</li>
   </ol>
+  <footer>
+    <div class="footer-about">
+
+      <p><cite>
+          Recipes Website
+        </cite> made it by MH'D </p>
+
+    </div>
+
+    <div class="footer-address">
+      <p>address:</p>
+      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+    </div>
+
+    <div class="footer-contact">
+      <p>Contact us:</p>
+      <address>
+        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
+        <img src="./assets/images/instagram.png" alt="" height="24db">
+      </address>
+    </div>
+
+  </footer>
   </div>
 </body>
 
