--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
 <body>
 
   <div class="container">
-
+    <div class="nav">
     <a href="./">
       <img src="./assets/images/chef-odin-180w.png" alt="odin logo" height="79">
     </a>
+  </div>
+   
 
-    <br><br>
-    
     <img srcset="./assets/images/hero-image-360w.webp 360w,
-              ./assets/images/hero-image-750w.webp 750w" 
-              sizes="(max-width: 780px) 360px, 750px"
-      src="./assets/images/hero-image-750w.webp" 
-      alt="A steak is cooking in a skillet on a wooden table" 
-      height="500px" class="img-hero">
+              ./assets/images/hero-image-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
+      src="./assets/images/hero-image-750w.webp" alt="A steak is cooking in a skillet on a wooden table" height="500px"
+      class="img-hero">
 
     <h1 class="title">Odin Recipes</h1>
 
@@ -53,6 +51,33 @@
       </li>
     </ul>
 
+    <footer>
+      <div class="footer-about">
+
+        <p><cite>
+            Recipes Website
+          </cite> made it by MH'D </p>
+
+      </div>
+
+      <div class="footer-address">
+        <p>address:</p>
+        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+      </div>
+
+      <div class="footer-contact">
+        <p>Contact us:</p>
+        <address>
+          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+          <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
+          <img src="./assets/images/instagram.png" alt="" height="24db">
+        </address>
+      </div>
+
+
+
+    </footer>
 
   </div>
 </body>
