--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -43,6 +43,34 @@
     <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into each
       avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
   </ol>
+
+  <footer>
+    <div class="footer-about">
+
+      <p><cite>
+          Recipes Website
+        </cite> made it by MH'D </p>
+
+    </div>
+
+    <div class="footer-address">
+      <p>address:</p>
+      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+    </div>
+
+    <div class="footer-contact">
+      <p>Contact us:</p>
+      <address>
+        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
+        <img src="./assets/images/instagram.png" alt="" height="24db">
+      </address>
+    </div>
+
+
+
+  </footer>
 </div>
 </body>
 
