--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -11,67 +11,70 @@
 
 <body>
   <div class="container">
-  <a href="../../">
-    <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-  </a>
-  <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
+    <div class="nav">
+      <a href="../../">
+        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+      </a>
+      <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
+    </div>
+   
+    <h1>Caprese Stuffed Avocado</h1>
 
-  <h1>Caprese Stuffed Avocado</h1>
-
-  <img srcset="../../assets/images/r-avocado-360w.webp 360w,
+    <img srcset="../../assets/images/r-avocado-360w.webp 360w,
             ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-    src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero" >
+      src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero">
 
-  <h2>Description</h2>
+    <h2>Description</h2>
 
-  <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using cherry
-    tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
+    <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using cherry
+      tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
 
-  <h2>Ingredients</h2>
-  <ul>
-    <li>1 avocado - peeled, pitted, and cut in half</li>
-    <li>1/4 cup fresh mozzarella pearls</li>
-    <li>1/4 cup cherry tomatoes, halved</li>
-    <li>6 fresh basil leaves, thinly sliced</li>
-    <li>1 tablespoon balsamic vinegar</li>
-    <li>salt and pepper to taste</li>
-  </ul>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 avocado - peeled, pitted, and cut in half</li>
+      <li>1/4 cup fresh mozzarella pearls</li>
+      <li>1/4 cup cherry tomatoes, halved</li>
+      <li>6 fresh basil leaves, thinly sliced</li>
+      <li>1 tablespoon balsamic vinegar</li>
+      <li>salt and pepper to taste</li>
+    </ul>
 
-  <h2>Steps</h2>
-  <ol>
-    <li>Arrange avocado halves onto a plate.</li>
-    <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into each
-      avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
-  </ol>
+    <h2>Steps</h2>
+    <ol>
+      <li>Arrange avocado halves onto a plate.</li>
+      <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into
+        each
+        avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
+    </ol>
 
-  <footer>
-    <div class="footer-about">
+    <footer>
+      <div class="footer-about">
 
-      <p><cite>
-          Recipes Website
-        </cite> made it by MH'D </p>
+        <p><cite>
+            Recipes Website
+          </cite> made it by MH'D </p>
 
-    </div>
+      </div>
 
-    <div class="footer-address">
-      <p>address:</p>
-      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
-    </div>
+      <div class="footer-address">
+        <p>address:</p>
+        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+      </div>
 
-    <div class="footer-contact">
-      <p>Contact us:</p>
-      <address>
-        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
-        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
-        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
-        <img src="./assets/images/instagram.png" alt="" height="24db">
-      </address>
-    </div>
+      <div class="footer-contact">
+        <p>Contact us:</p>
+        <address>
+          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+          <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
+          <img src="./assets/images/instagram.png" alt="" height="24db">
+        </address>
+      </div>
 
 
 
-  </footer>
-</div>
+    </footer>
+  </div>
 </body>
 
 </html>
