--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -10,20 +10,17 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="nav">
+    <header>
       <a href="../../">
         <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
       </a>
-      <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
-    </div>
-   
-    <h1>Caprese Stuffed Avocado</h1>
-
+    </header>
+    <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p>
+    <div class="container">
     <img srcset="../../assets/images/r-avocado-360w.webp 360w,
             ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
       src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero">
-
+    <h1>Caprese Stuffed Avocado</h1>
     <h2>Description</h2>
 
     <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using cherry
@@ -46,35 +43,35 @@
         each
         avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
     </ol>
-
-    <footer>
-      <div class="footer-about">
-
-        <p><cite>
-            Recipes Website
-          </cite> made it by MH'D </p>
-
-      </div>
-
-      <div class="footer-address">
-        <p>address:</p>
-        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
-      </div>
-
-      <div class="footer-contact">
-        <p>Contact us:</p>
-        <address>
-          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
-          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
-          <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
-          <img src="./assets/images/instagram.png" alt="" height="24db">
-        </address>
-      </div>
-
-
-
-    </footer>
   </div>
+
+  <footer>
+    <div class="footer-about">
+
+      <p><cite>
+          Recipes Website
+        </cite> made it by MH'D </p>
+
+    </div>
+
+    <div class="footer-address">
+      <p>address:</p>
+      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+    </div>
+
+    <div class="footer-contact">
+      <p>Contact us:</p>
+      <address>
+        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
+        <img src="./assets/images/instagram.png" alt="" height="24db">
+      </address>
+    </div>
+
+
+
+  </footer>
 </body>
 
 </html>
