--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="nav">
-      <a href="../../">
-        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-      </a>
+  <header>
+    <a href="../../">
+      <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+    </a>
+  </header>
+  <p><a href="../../">Home</a> / Tartufo</p>
 
-      <p><a href="../../">Home</a> / Tartufo</p>
-    </div>
+  <div class="container">
     <h1>Tartufo</h1>
     <img srcset="../../assets/images/tartufo-360w.webp 360w,
             ../../assets/images/tartufo-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
@@ -66,32 +66,34 @@
         sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each one.
         Freeze until set, about 1 hour, or until ready to serve.</li>
     </ol>
-    <footer>
-      <div class="footer-about">
 
-        <p><cite>
-            Recipes Website
-          </cite> made it by MH'D </p>
-
-      </div>
-
-      <div class="footer-address">
-        <p>address:</p>
-        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
-      </div>
-
-      <div class="footer-contact">
-        <p>Contact us:</p>
-        <address>
-          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
-          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
-          <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
-          <img src="./assets/images/instagram.png" alt="" height="24db">
-        </address>
-      </div>
-
-    </footer>
   </div>
+
+  <footer>
+    <div class="footer-about">
+
+      <p><cite>
+          Recipes Website
+        </cite> made it by MH'D </p>
+
+    </div>
+
+    <div class="footer-address">
+      <p>address:</p>
+      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+    </div>
+
+    <div class="footer-contact">
+      <p>Contact us:</p>
+      <address>
+        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
+        <img src="./assets/images/instagram.png" alt="" height="24db">
+      </address>
+    </div>
+
+  </footer>
 </body>
 
 </html>
