--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
+
+  <header>
+    <a href="../../">
+      <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+    </a>
+    <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
+
+  </header>
+
   <div class="container">
-    <div class="nav">
-      <a href="../../">
-        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-      </a>
-      <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p>
-    </div>
-
-  
-
     <h1>Lemon Chicken and Rice Casserole</h1>
     <img srcset="../../assets/images/chicken-rice-360w.webp 360w,
             ../../assets/images/chicken-rice-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
@@ -83,36 +83,36 @@
         evenly among 4 plates. Garnish with
         additional tarragon and crushed red pepper.</li>
     </ol>
-
-    <footer>
-      <div class="footer-about">
-
-        <p><cite>
-            Recipes Website
-          </cite> made it by MH'D </p>
-
-      </div>
-
-      <div class="footer-address">
-        <p>address:</p>
-        <address>2702 - 7895 Jane street Zahle, Lebanon </address>
-      </div>
-
-      <div class="footer-contact">
-        <p>Contact us:</p>
-        <address>
-          <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
-          <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
-          <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
-          <img src="./assets/images/instagram.png" alt="" height="24db">
-        </address>
-      </div>
-
-
-
-    </footer>
-
   </div>
+
+
+  <footer>
+    <div class="footer-about">
+
+      <p><cite>
+          Recipes Website
+        </cite> made it by MH'D </p>
+
+    </div>
+
+    <div class="footer-address">
+      <p>address:</p>
+      <address>2702 - 7895 Jane street Zahle, Lebanon </address>
+    </div>
+
+    <div class="footer-contact">
+      <p>Contact us:</p>
+      <address>
+        <a href="mailto:kenaan.odin@outlook.com">kenaan.odin@outlook.com</a>
+        <a href="tel:+1 (123) 000-1212">tel:+1 (123) 000-1212</a>
+        <img src="./assets/images/facebook-app-symbol.png" height="24db" alt="">
+        <img src="./assets/images/instagram.png" alt="" height="24db">
+      </address>
+    </div>
+
+
+
+  </footer>
 
 </body>
 
